melhoria de codigo